// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createSarifOutputForContainers general with critical severity issue without CVE 1`] = `
{
  "$schema": "https://docs.oasis-open.org/sarif/sarif/v2.1.0/errata01/os/schemas/sarif-schema-2.1.0.json",
  "runs": [
    {
      "results": [
        {
          "fixes": undefined,
          "level": "error",
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "expat@2.2.5-r0",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "Dockerfile",
                },
                "region": {
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "This file introduces a vulnerable expat package with a critical severity vulnerability.",
          },
          "ruleId": "SNYK-LINUX-EXPAT-450908",
        },
      ],
      "tool": {
        "driver": {
          "informationUri": "https://docs.snyk.io/",
          "name": "Snyk Container",
          "properties": {
            "artifactsScanned": 969,
          },
          "rules": [
            {
              "defaultConfiguration": {
                "level": "error",
              },
              "fullDescription": {
                "text": "expat@2.2.5-r0",
              },
              "help": {
                "markdown": "## Overview
In libexpat in Expat before 2.2.7, XML input including XML names that contain a large number of colons could make the XML parser consume a high amount of RAM and CPU resources while processing (enough to be usable for denial-of-service attacks).

## References
- [Bugtraq Mailing List](https://seclists.org/bugtraq/2019/Jun/39)
- [CVE Details](https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2018-20843)
- [Debian Security Advisory](https://www.debian.org/security/2019/dsa-4472)
- [Debian Security Announcement](https://lists.debian.org/debian-lts-announce/2019/06/msg00028.html)
- [Debian Security Tracker](https://security-tracker.debian.org/tracker/CVE-2018-20843)
- [GitHub Commit](https://github.com/libexpat/libexpat/pull/262/commits/11f8838bf99ea0a6f0b76f9760c43704d00c4ff6)
- [GitHub Issue](https://github.com/libexpat/libexpat/issues/186)
- [GitHub PR](https://github.com/libexpat/libexpat/pull/262)
- [MISC](https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=5226)
- [MISC](https://github.com/libexpat/libexpat/blob/R_2_2_7/expat/Changes)
- [Netapp Security Advisory](https://security.netapp.com/advisory/ntap-20190703-0001/)
- [Ubuntu CVE Tracker](http://people.ubuntu.com/~ubuntu-security/cve/CVE-2018-20843)
- [Ubuntu Security Advisory](https://usn.ubuntu.com/4040-1/)
- [Ubuntu Security Advisory](https://usn.ubuntu.com/4040-2/)
",
                "text": "",
              },
              "id": "SNYK-LINUX-EXPAT-450908",
              "properties": {
                "cvssv3_baseScore": 7.5,
                "security-severity": "7.5",
                "tags": [
                  "security",
                  "CWE-611",
                  "npm",
                ],
              },
              "shortDescription": {
                "text": "Critical severity - XML External Entity (XXE) Injection vulnerability in expat",
              },
            },
          ],
          "semanticVersion": "1.0.0-monorepo",
          "version": "1.0.0-monorepo",
        },
      },
    },
  ],
  "version": "2.1.0",
}
`;

exports[`createSarifOutputForContainers general with critical severity issue without CWE 1`] = `
{
  "$schema": "https://docs.oasis-open.org/sarif/sarif/v2.1.0/errata01/os/schemas/sarif-schema-2.1.0.json",
  "runs": [
    {
      "results": [
        {
          "fixes": undefined,
          "level": "error",
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "expat@2.2.5-r0",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "Dockerfile",
                },
                "region": {
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "This file introduces a vulnerable expat package with a critical severity vulnerability.",
          },
          "ruleId": "SNYK-LINUX-EXPAT-450908",
        },
      ],
      "tool": {
        "driver": {
          "informationUri": "https://docs.snyk.io/",
          "name": "Snyk Container",
          "properties": {
            "artifactsScanned": 969,
          },
          "rules": [
            {
              "defaultConfiguration": {
                "level": "error",
              },
              "fullDescription": {
                "text": "(CVE-2018-20843) expat@2.2.5-r0",
              },
              "help": {
                "markdown": "## Overview
In libexpat in Expat before 2.2.7, XML input including XML names that contain a large number of colons could make the XML parser consume a high amount of RAM and CPU resources while processing (enough to be usable for denial-of-service attacks).

## References
- [Bugtraq Mailing List](https://seclists.org/bugtraq/2019/Jun/39)
- [CVE Details](https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2018-20843)
- [Debian Security Advisory](https://www.debian.org/security/2019/dsa-4472)
- [Debian Security Announcement](https://lists.debian.org/debian-lts-announce/2019/06/msg00028.html)
- [Debian Security Tracker](https://security-tracker.debian.org/tracker/CVE-2018-20843)
- [GitHub Commit](https://github.com/libexpat/libexpat/pull/262/commits/11f8838bf99ea0a6f0b76f9760c43704d00c4ff6)
- [GitHub Issue](https://github.com/libexpat/libexpat/issues/186)
- [GitHub PR](https://github.com/libexpat/libexpat/pull/262)
- [MISC](https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=5226)
- [MISC](https://github.com/libexpat/libexpat/blob/R_2_2_7/expat/Changes)
- [Netapp Security Advisory](https://security.netapp.com/advisory/ntap-20190703-0001/)
- [Ubuntu CVE Tracker](http://people.ubuntu.com/~ubuntu-security/cve/CVE-2018-20843)
- [Ubuntu Security Advisory](https://usn.ubuntu.com/4040-1/)
- [Ubuntu Security Advisory](https://usn.ubuntu.com/4040-2/)
",
                "text": "",
              },
              "id": "SNYK-LINUX-EXPAT-450908",
              "properties": {
                "cvssv3_baseScore": 7.5,
                "security-severity": "7.5",
                "tags": [
                  "security",
                  "npm",
                ],
              },
              "shortDescription": {
                "text": "Critical severity - XML External Entity (XXE) Injection vulnerability in expat",
              },
            },
          ],
          "semanticVersion": "1.0.0-monorepo",
          "version": "1.0.0-monorepo",
        },
      },
    },
  ],
  "version": "2.1.0",
}
`;

exports[`createSarifOutputForContainers general with high severity issue 1`] = `
{
  "$schema": "https://docs.oasis-open.org/sarif/sarif/v2.1.0/errata01/os/schemas/sarif-schema-2.1.0.json",
  "runs": [
    {
      "results": [
        {
          "fixes": undefined,
          "level": "error",
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "expat@2.2.5-r0",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "Dockerfile",
                },
                "region": {
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "This file introduces a vulnerable expat package with a high severity vulnerability.",
          },
          "ruleId": "SNYK-LINUX-EXPAT-450908",
        },
      ],
      "tool": {
        "driver": {
          "informationUri": "https://docs.snyk.io/",
          "name": "Snyk Container",
          "properties": {
            "artifactsScanned": 969,
          },
          "rules": [
            {
              "defaultConfiguration": {
                "level": "error",
              },
              "fullDescription": {
                "text": "(CVE-2018-20843) expat@2.2.5-r0",
              },
              "help": {
                "markdown": "## Overview
In libexpat in Expat before 2.2.7, XML input including XML names that contain a large number of colons could make the XML parser consume a high amount of RAM and CPU resources while processing (enough to be usable for denial-of-service attacks).

## References
- [Bugtraq Mailing List](https://seclists.org/bugtraq/2019/Jun/39)
- [CVE Details](https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2018-20843)
- [Debian Security Advisory](https://www.debian.org/security/2019/dsa-4472)
- [Debian Security Announcement](https://lists.debian.org/debian-lts-announce/2019/06/msg00028.html)
- [Debian Security Tracker](https://security-tracker.debian.org/tracker/CVE-2018-20843)
- [GitHub Commit](https://github.com/libexpat/libexpat/pull/262/commits/11f8838bf99ea0a6f0b76f9760c43704d00c4ff6)
- [GitHub Issue](https://github.com/libexpat/libexpat/issues/186)
- [GitHub PR](https://github.com/libexpat/libexpat/pull/262)
- [MISC](https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=5226)
- [MISC](https://github.com/libexpat/libexpat/blob/R_2_2_7/expat/Changes)
- [Netapp Security Advisory](https://security.netapp.com/advisory/ntap-20190703-0001/)
- [Ubuntu CVE Tracker](http://people.ubuntu.com/~ubuntu-security/cve/CVE-2018-20843)
- [Ubuntu Security Advisory](https://usn.ubuntu.com/4040-1/)
- [Ubuntu Security Advisory](https://usn.ubuntu.com/4040-2/)
",
                "text": "",
              },
              "id": "SNYK-LINUX-EXPAT-450908",
              "properties": {
                "cvssv3_baseScore": 7.5,
                "security-severity": "7.5",
                "tags": [
                  "security",
                  "CWE-611",
                  "npm",
                ],
              },
              "shortDescription": {
                "text": "High severity - XML External Entity (XXE) Injection vulnerability in expat",
              },
            },
          ],
          "semanticVersion": "1.0.0-monorepo",
          "version": "1.0.0-monorepo",
        },
      },
    },
  ],
  "version": "2.1.0",
}
`;
